# hello_python

./: 0_print.py  10_list.py  11_tupe.py  13_range.py  14_dict.py  16_practice.py  17_exception.py  18_raise.py  19_function.py  23_package.py  24_module.py  26_re.py  27_time.py  28_turtle.py  2_variable.py  3_string.py  4_data_type_conversion.py  5_oprator.py  6_if.py  7_match.py  8_loop.py  9_sequence.py  README.md  main.py  pyproject.toml  study_line.md  user.json  uv.md  with.py
0_algorithm/: 1_有效括号.ipynb  2_queue.ipynb  3_algorithm.ipynb  base.md
0_practice/: 1_practice.py
10_module/: 1_use_module.py  2_use_module.py  tools.py
11_package/: 1_global_import.py  1_use_package copy.py  2_local_import.py  3_all.py
12_standerd_library/: 3_random.py
14_decorator/: 1_base.py
15_iterator/: 1_note.ipynb  2_note.ipynb  note.md
16_generator/: note.md
19_socket/: client.py  request.py  server.py  starlette_app.py  thread_serve.py  udp_client.py  udp_server.py
1_data_type/: 0_print.py  1_input.py  3_string.py  4_data_type_conversion.py  6_进制.py
20_async/: 10_thread.py  1_sync.py  2.1_concurrency.py  2_create_task.py  4_gather.py  4_test.py  8_timeout.py  tools.py
20_saync/: 2.1_concurrency.py  2_create_task.py  5_as_completed.py  6_wait_for.py  7_wait.py  8_timeout.py  coroutine.ipynb  test.py
29_socket/: client.py  server.py
2_branch/: if.py  match.py
30_file/: handle_csv.py  read_file.py  with.py  write_file.py
30_pydantic/: base.py  base2.py
31_class/: defined_class.py
32_magic_methods/: magic_methods.py
3_loop/: for.py  practice.py  while.py
(+47 files in other folders)
