[project]
name = "hello-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "python-docx>=1.1.2",
    "langchain-openai==1.1.10",
    "pypdf>=6.7.2",
    "requests>=2.32.5",
    "ruff>=0.15.2",
    "starlette>=0.52.1",
    "uvicorn>=0.41.0",
    "pymupdf>=1.27.1",
    "pillow>=12.1.1",
]
