[project]
name = "hello-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "python-docx>=1.1.2",
    "langchain-openai==1.1.12",
    "pypdf>=6.10.0",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "pymupdf>=1.27.2",
    "pillow>=12.2.0",
    "pydantic>=2.12.4",
]
